	PR debug/42861 	* var-tracking.c (val_store): Add modified argument, obey it. 	Adjust callers. 	(count_uses): Move down logging of main. 	(compute_bb_dataflow): Use val_store for MO_VAL_USEs that 	don't need resolution. 	(emit_notes_in_bb): Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156292 138bc75d-0d04-0410-961f-82ee72b054a4